# CrewTrade

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  Taskfile.yaml  pyproject.toml  research_chronos.py  restore_and_run.py  translate_docs.py  translate_md.py
.claude/: settings.local.json
.github/workflows/: pages.yml
AITradingCrew/: .gitignore  AGENTS.md  README.md  pyproject.toml
AITradingCrew/ai_trading_crew/: use_case_runner.py
AITradingCrew/output/: README.md
AITradingCrew/scripts/: run_backtest_validation.py
ai_trading_crew/: README.md
config/use_cases/: README.md  credit_spread.yaml  etf.yaml  imura.yaml  legendary_investors.yaml  loan.yaml  oracle.yaml  semiconductors.yaml  yield_spread.yaml
crew/: README.md  app.py  base.py  config.py  crew.py  main.py  market_overview_agents.py  registry.py  stock_processor.py  use_case_runner.py
crew/analysts/: fundamental_analysis.py  market_overview.py  social.py  stock_articles_fetcher.py  stock_headlines_fetcher.py  technical_indicators.py  timegpt.py
crew/backtests/: run_validation.py  securities_collateral_loan_backtest.py
crew/clients/: __init__.py  equities.py  fixed_income.py  index_mapping.py  jpx.py  metals.py  pricing.py  ticker_utils.py  toushin_kyokai.py  yield_spread.py
crew/credit/: __init__.py  analysis.py  config.py  data_pipeline.py  (+3 more)
docs/: index.html
freqtrade/: CONTRIBUTING.md  README.md
output/: README.md
scripts/: analyze_reports.py  kronos_tool.py  pm_efficiency.py  run_process_all_manual.py  verify_kronos.py
tmp_processed/: README.md
tmp_report/: README.md  securities_collateral_loan_insights.md  securities_collateral_loan_report.md
web/: app.py  build_static.py
yahooquery/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
(+2497 files in other folders)
