[project]
name = "crew"
version = "0.1.0"
description = "ai-trading-crew using crewAI"
authors = [{ name = "Antigravity", email = "antigravity@gemini.google.com" }]
requires-python = ">=3.11,<3.12"
dependencies = [
    "crewai[tools]",
    "onnxruntime",
    "numpy<2",
    "yfinance",
    "pandas-datareader",
    "pandas-market-calendars",
    "pandas<2.0.0",
    "nixtla",
    "matplotlib",
    "ta-lib",
    "linkup-sdk",
    "crawl4ai",
    "openpyxl",
    "requests",
    "seaborn",
    "yahooquery",
    "setuptools",
    "flask",
    "markdown",
    "torch",
    "einops",
    "huggingface_hub",
    "safetensors",
    "pyarrow",
]

[project.scripts]
crew = "crew.main:run"
run_crew = "crew.main:run"
train = "crew.main:train"
replay = "crew.main:replay"
test = "crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
